@@ -25,7 +25,7 @@ $loop->add(
                                            interval => 0.1,
                                            on_tick => sub {
                                                pass;
-                                               print {$term->trl()->OUT()} $Term::ReadLine::Stub::rl_term_set[3];
+                                               print {$term->OUT()} $Term::ReadLine::Stub::rl_term_set[3];
                                                exit 0
                                            }
                                           )->start
